<resources>
    <string name="app_name">kt-caclulator-app</string>
    <string name="calculationDefaultDisplay">Trust me</string>
    <string name="resultDefaultDisplay">this works!</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMultiply">x</string>
    <string name="btnDivide">/</string>
    <string name="btnUndo">C</string>
    <string name="btnEqual">=</string>
    <string name="btnClear">AC</string>
    <string name="btnDot">.</string>
    <string name="btnSign">+/-</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnZero">0</string>
</resources>